force-app/main/default/objects/Company__mdt/Company__mdt.object-meta.xml
<CustomObject>
    <label>Company</label>
    <pluralLabel>Company</pluralLabel>
</CustomObject>