force-app/main/default/objects/Company__mdt/fields/Addr1__c.field-meta.xml
<CustomField>
    <fullName>Addr1__c</fullName>
    <label>Addr1</label>
    <type>TextArea</type>
</CustomField>