force-app/main/default/objects/Company__mdt/fields/Addr2__c.field-meta.xml
<CustomField>
    <fullName>Addr2__c</fullName>
    <label>Addr2</label>
    <type>TextArea</type>
</CustomField>