force-app/main/default/objects/Company__mdt/fields/GST_State_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_State_Code__c</fullName>
    <label>GST State Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>29</fullName>
                <default>true</default>
                <label>29</label>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>34</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>