force-app/main/default/objects/Company__mdt/fields/Gstin__c.field-meta.xml
<CustomField>
    <fullName>Gstin__c</fullName>
    <label>Gstin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>