force-app/main/default/objects/Company__mdt/fields/Leagal_Name__c.field-meta.xml
<CustomField>
    <fullName>Leagal_Name__c</fullName>
    <label>Leagal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>